--- a/AppRecyclerView/app/src/main/res/layout/activity_main.xml
+++ b/AppRecyclerView/app/src/main/res/layout/activity_main.xml
@@ -1,20 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:layout_margin="10dp">
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
+
+        android:background="#3F51B5"
+        android:padding="12dp"
         android:text="LISTA DE REGISTROS"
         android:textAlignment="center"
+        android:textColor="#FFFFFF"
+        android:textSize="20sp"
         android:textStyle="bold" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/lista_registros"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+
+
+
+
+
 
 </LinearLayout>
