--- a/AppRecyclerView/app/src/main/res/layout/registro_custom_adapter.xml
+++ b/AppRecyclerView/app/src/main/res/layout/registro_custom_adapter.xml
@@ -1,76 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="20dp">
+    android:orientation="horizontal"
+    android:layout_margin="10dp"
+    android:padding="10dp">
+
+
+    <ImageView
+        android:layout_width="122dp"
+        android:layout_height="95dp"
+        android:layout_marginTop="15dp"
+        android:layout_weight="1"
+        app:srcCompat="@drawable/outline_account_circle_black_48" />
 
     <LinearLayout
-        android:layout_width="1dp"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="8dp"
-        android:layout_weight="4"
-        android:orientation="vertical">
+        android:layout_width="258dp"
+        android:layout_height="136dp"
+        android:layout_marginLeft="5dp"
+        android:orientation="vertical"
+        android:padding="5dp">
 
         <TextView
             android:id="@+id/txtNombre"
-            android:layout_width="wrap_content"
+            android:layout_width="253dp"
             android:layout_height="wrap_content"
             android:layout_weight="4"
-            android:text="Nombre"/>
-
-        <TextView
-            android:id="@+id/txtAltura"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="4"
-            android:text="Altura" />
+            android:text="Nombre" />
 
         <TextView
             android:id="@+id/txtPeso"
-            android:layout_width="wrap_content"
+            android:layout_width="253dp"
             android:layout_height="wrap_content"
             android:layout_weight="4"
             android:text="Peso" />
 
         <TextView
-            android:id="@+id/txtIMC"
-            android:layout_width="wrap_content"
+            android:id="@+id/txtAltura"
+            android:layout_width="253dp"
             android:layout_height="wrap_content"
             android:layout_weight="4"
-            android:text="IMC" />
-
-    </LinearLayout>
-
-
-    <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="8dp"
-        android:layout_weight="4"
-        android:orientation="vertical">
+            android:text="Altura" />
 
         <TextView
-            android:id="@+id/txt_nombre"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-        <TextView
-            android:id="@+id/txt_altura"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-        <TextView
-            android:id="@+id/txt_peso"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-        <TextView
-            android:id="@+id/txt_IMC"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:id="@+id/txtIMC"
+            android:layout_width="253dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="4"
+            android:text="Resultado IMC" />
 
     </LinearLayout>
 
 </LinearLayout>
+
+
